RESOLVED FIXED176234
ASSERTION FAILED: taken.get() == &job in WebCore::ServiceWorkerContainer::jobDidFinish(WebCore::ServiceWorkerJob &)
https://bugs.webkit.org/show_bug.cgi?id=176234
Summary ASSERTION FAILED: taken.get() == &job in WebCore::ServiceWorkerContainer::job...
Ryan Haddad
Reported 2017-09-01 11:00:43 PDT
Created attachment 319620 [details] crash log ASSERTION FAILED: taken.get() == &job /Volumes/Data/slave/elcapitan-debug/build/Source/WebCore/workers/service/ServiceWorkerContainer.cpp(218) : void WebCore::ServiceWorkerContainer::jobDidFinish(WebCore::ServiceWorkerJob &) 1 0x11e28d9f0 WTFCrash 2 0x1128a5683 WebCore::ServiceWorkerContainer::jobDidFinish(WebCore::ServiceWorkerJob&) 3 0x1128a55bc WebCore::ServiceWorkerContainer::jobFailedWithException(WebCore::ServiceWorkerJob&, WebCore::Exception const&) 4 0x1128a56d7 non-virtual thunk to WebCore::ServiceWorkerContainer::jobFailedWithException(WebCore::ServiceWorkerJob&, WebCore::Exception const&) 5 0x1128aacca WebCore::ServiceWorkerJob::failedWithException(WebCore::Exception const&) 6 0x112c1bf63 WebCore::SWClientConnection::jobRejectedInServer(unsigned long long, WebCore::ExceptionData const&) 7 0x10cad0548 void IPC::callMemberFunctionImpl<WebKit::WebSWClientConnection, void (WebCore::SWClientConnection::*)(unsigned long long, WebCore::ExceptionData const&), std::__1::tuple<unsigned long long, WebCore::ExceptionData>, 0ul, 1ul>(WebKit::WebSWClientConnection*, void (WebCore::SWClientConnection::*)(unsigned long long, WebCore::ExceptionData const&), std::__1::tuple<unsigned long long, WebCore::ExceptionData>&&, std::__1::integer_sequence<unsigned long, 0ul, 1ul>) 8 0x10cad01f8 void IPC::callMemberFunction<WebKit::WebSWClientConnection, void (WebCore::SWClientConnection::*)(unsigned long long, WebCore::ExceptionData const&), std::__1::tuple<unsigned long long, WebCore::ExceptionData>, std::__1::integer_sequence<unsigned long, 0ul, 1ul> >(std::__1::tuple<unsigned long long, WebCore::ExceptionData>&&, WebKit::WebSWClientConnection*, void (WebCore::SWClientConnection::*)(unsigned long long, WebCore::ExceptionData const&)) 9 0x10cacfe88 void IPC::handleMessage<Messages::WebSWClientConnection::JobRejectedInServer, WebKit::WebSWClientConnection, void (WebCore::SWClientConnection::*)(unsigned long long, WebCore::ExceptionData const&)>(IPC::Decoder&, WebKit::WebSWClientConnection*, void (WebCore::SWClientConnection::*)(unsigned long long, WebCore::ExceptionData const&)) 10 0x10cacfbc5 WebKit::WebSWClientConnection::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 11 0x10cad5806 WebKit::WebToStorageProcessConnection::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 12 0x10c02db93 IPC::Connection::dispatchMessage(IPC::Decoder&) 13 0x10c024e51 IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >) 14 0x10c02e19f IPC::Connection::dispatchOneMessage() 15 0x10c0351cd IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_14::operator()() 16 0x10c03511c WTF::Function<void ()>::CallableWrapper<IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_14>::call() 17 0x11e2c70fe WTF::Function<void ()>::operator()() const 18 0x11e2e8618 WTF::RunLoop::performWork() 19 0x11e2e8e24 WTF::RunLoop::performWork(void*) 20 0x7fff96e7a7e1 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 21 0x7fff96e59f0c __CFRunLoopDoSources0 22 0x7fff96e5942f __CFRunLoopRun 23 0x7fff96e58e28 CFRunLoopRunSpecific 24 0x7fff97a00935 RunCurrentEventLoopInMode 25 0x7fff97a0076f ReceiveNextEventCommon 26 0x7fff97a005af _BlockUntilNextEventMatchingListInModeWithFilter 27 0x7fff8e578df6 _DPSNextEvent 28 0x7fff8e578226 -[NSApplication _nextEventMatchingEventMask:untilDate:inMode:dequeue:] 29 0x7fff8e56cd80 -[NSApplication run] 30 0x7fff8e536368 NSApplicationMain 31 0x7fff8a255194 _xpc_objc_main LEAK: 20 WebPageProxy https://build.webkit.org/results/Apple%20El%20Capitan%20Debug%20WK2%20(Tests)/r221478%20(2833)/results.html
Attachments
crash log (95.31 KB, text/plain)
2017-09-01 11:00 PDT, Ryan Haddad
no flags
Fix (1.49 KB, patch)
2017-09-01 16:25 PDT, Brady Eidson
commit-queue: commit-queue-
Patch (1.49 KB, patch)
2017-09-01 16:30 PDT, Brady Eidson
no flags
Radar WebKit Bug Importer
Comment 1 2017-09-01 11:03:49 PDT
Ryan Haddad
Comment 2 2017-09-01 11:18:41 PDT
Brady Eidson
Comment 3 2017-09-01 15:58:13 PDT
Flakey? Always?
Brady Eidson
Comment 4 2017-09-01 16:02:53 PDT
Building with a clean tree now.
Brady Eidson
Comment 5 2017-09-01 16:20:04 PDT
I can reliably reproduce with: run-webkit-tests http/tests/workers/service http/tests/xmlhttprequest/workers/abort-exception-assert.html --child-processes=1
Brady Eidson
Comment 6 2017-09-01 16:25:06 PDT
WebKit Commit Bot
Comment 7 2017-09-01 16:26:49 PDT
Comment on attachment 319666 [details] Fix Rejecting attachment 319666 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'validate-changelog', '--check-oops', '--non-interactive', 319666, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit /Volumes/Data/EWS/WebKit/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://webkit-queues.webkit.org/results/4429615
WebKit Commit Bot
Comment 8 2017-09-01 16:29:18 PDT
Comment on attachment 319666 [details] Fix Rejecting attachment 319666 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'validate-changelog', '--check-oops', '--non-interactive', 319666, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit /Volumes/Data/EWS/WebKit/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://webkit-queues.webkit.org/results/4429642
Brady Eidson
Comment 9 2017-09-01 16:30:50 PDT
WebKit Commit Bot
Comment 10 2017-09-01 16:59:24 PDT
Comment on attachment 319667 [details] Patch Clearing flags on attachment: 319667 Committed r221509: <http://trac.webkit.org/changeset/221509>
WebKit Commit Bot
Comment 11 2017-09-01 16:59:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.