ASSERTION FAILED: taken.get() == &job in WebCore::ServiceWorkerContainer::jobDidFinish(WebCore::ServiceWorkerJob &). https://bugs.webkit.org/show_bug.cgi?id=176234

Rubberstamped by Tim Horton, reluctantly.

* workers/service/ServiceWorkerContainer.cpp:
(WebCore::ServiceWorkerContainer::jobDidFinish): It's valid for the job to be missing after navigations, which is
  why this was hitting downstream tests.


Canonical link: https://commits.webkit.org/192909@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221509 268f45cc-cd09-0410-ab3c-d52691b4dbfc